--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,12 @@ body{
 /* font section end */
 
 /* nav section start */
+section{
+    padding: 4rem 2rem;
+}
+.banner-img img{
+    width: 100%;
+}
 nav{
     background-color: #fff;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
@@ -71,3 +77,81 @@ ul a{
     font-weight: 700;
 }
 /* nav section end */
+
+
+
+
+/* banner section start */
+.banner-section{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.banner-heading, .banner-img{
+    width: 50%;
+}
+
+.banner-heading p{
+    color: #0B0223;
+    font-size: 4rem;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.banner-heading h1{
+    font-size: 7rem;
+    font-weight: 900;
+    text-transform: uppercase;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.banner-heading .banner-text{
+    padding: 2rem 0 3rem 0;
+}
+
+.banner-text p{
+    color: #534C64;
+    font-size: 1.2rem;
+    margin-top: 10px;
+    font-weight: 500;
+    text-transform: lowercase;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+
+.btn-primary{
+    font-size: 1.2rem;
+    padding: 10px 30px;
+    border-radius: 25px;
+    border: 0px;
+    background: #FF42A5;
+    color: white;
+    font-weight: 600;
+    transition: all 0.3s ease-out;
+}
+.blue2{
+    background: #4EC5F7;
+    margin-left: 20px;
+}
+
+
+
+.pink1:hover{
+    color: #FF42A5;
+    background: white;
+    border: 2px solid #FF42A5;
+    box-shadow: 4px 4px 10px #4f354c;
+    cursor: pointer;
+}
+.blue2:hover{
+    color: #4EC5F7;
+    background: #fff;
+    border: 2px solid #4EC5F7;
+    box-shadow: 4px 4px 10px #353b4f;
+    cursor: pointer;
+}
+
+/* banner section end */
