--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -62,6 +62,11 @@
         margin: 0 auto;
         text-align: center;
     }
+     /* suggestion section */
+         .suggestion-section{
+             padding-top: 2.4rem;
+            gap: 1.5rem;
+       }
 }
 
 
