--- a/styles/style.css
+++ b/styles/style.css
@@ -256,3 +256,44 @@ ul a{
 }
 
 /* Online Games section end */
+
+/*suggestion section start */
+.btn-group{
+    display:flex;
+    flex-wrap: wrap;
+    gap: 1.9rem;
+}
+.suggestion-section{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 4.8rem;
+    padding-top: 3.5rem;
+}
+.suggestion-child{
+    display:flex;
+    align-items: center;
+    cursor: pointer;
+    justify-content: center;
+    padding: .6rem;
+    gap: 1rem;
+    background: #f7f6f6;
+    border-radius: 4rem;
+}
+.suggestion-child:hover{
+    outline: 2px solid #fc349b;
+    color: #fc349b;
+}
+
+.suggestion-child img{
+    width:3.5rem;
+    height:3.5rem;
+}
+.suggestion-child p{
+    color: #34323a;
+    font-size: 1.3rem;
+    font-weight: 600;
+    line-height: normal;
+}
+/* suggestion section end */
