--- a/styles/style.css
+++ b/styles/style.css
@@ -297,3 +297,71 @@ ul a{
     line-height: normal;
 }
 /* suggestion section end */
+
+/* footer section start */
+
+footer{
+    background: #34323a;
+    padding: 4rem auto;
+}
+.footer-section{
+    text-align: center;
+}
+.footer-logo{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.footer-logo p{
+    color: #FFF;
+    text-align: center;
+    font-size: 3.4rem;
+    font-weight: 700;
+}
+
+.category{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 4.4rem;
+    color: #FFF;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 600;
+    padding: 3rem 0;
+}
+.socle{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5rem;
+    flex-wrap: wrap;
+    font-size: 2.2rem;
+    color: #FFF;
+}
+.Privacy-Policy1{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    color: rgba(255, 255, 255, 0.60);
+    flex-wrap: wrap;
+    gap: 3rem;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 500;
+    font-family: normal;
+    padding: 3rem 0;
+}
+
+.copyright p{
+    color: rgba(255, 255, 255, 0.60);
+    text-align: center;
+    font-size: 1.2rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+/* footer section end */
