--- a/styles/style.css
+++ b/styles/style.css
@@ -256,6 +256,63 @@ ul a{
 }
 
 /* Online Games section end */
+/* 04 Play Instantly start */
+
+.play-instantly-section .play-instantly-title{
+    width: 50%;
+}
+.play-instantly-section{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8rem;
+}
+.play-instantly-section .play-instantly-images{
+    text-align: right;
+    width: 50%;
+}
+.play-instantly-images img{
+    width: 50%;
+    
+}
+
+.play-instantly-images{
+    position: relative;
+
+}
+.short-images{
+    position: absolute;
+    bottom: -10%;
+    left: -30%;
+}
+.play-instantly-images > img{
+    width: 90%;
+}
+
+.play-instantly-title h2{
+    text-align: right;
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 4rem; 
+}
+.play-instantly-title h2 span{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    font-weight: 700;
+    background-clip: text;
+}
+.play-instantly-title p{
+    color:#534C64;
+    text-align: right;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 2rem; 
+
+}
+
+/* 04 Play Instantly end */
 
 /*suggestion section start */
 .btn-group{
