--- a/styles/style.css
+++ b/styles/style.css
@@ -53,8 +53,8 @@ nav .nav-section{
 
 nav ul{
     display:flex;
-    gap: 2.8rem;
     align-items: center;
+    gap: 2.8rem;
     justify-content: center;
 }
 ul a{
@@ -222,6 +222,46 @@ ul a{
     width: 100%;
     
 }
+
+/* Overlay */
+.overlay-container{
+    position: relative;
+}
+.overlay{
+    border: 2px solid #F948B2;
+    overflow: hidden;
+    position: absolute;
+    bottom: 0;
+    left: 0;  
+    right: 0;
+    border-radius: 14px;
+    background: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 0;
+    transition: 0.3s ease;
+    margin-bottom: 2px;
+}
+.overlay-container:hover .overlay{
+    height: 100%;
+}
+.overlay p{
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    background:  linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.overlay i{
+    display: flex;
+    justify-content: center;
+    margin-top: 30%;
+}
+
+
 .online-game-title h2{
     color:  #0B0223;
     font-size: 3.4rem;
